// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc";
option java_outer_classname = "GrpcProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc CreateUser (GenericRequest) returns (GenericResponse) {}
  rpc GetUser (GenericRequest) returns (GenericResponse) {}
  rpc UpdateUser (GenericRequest) returns (GenericResponse) {}
  rpc DeleteUser (GenericRequest) returns (GenericResponse) {}
  rpc FindNode (FindMessage) returns (FindResponse) {}
  rpc GetRange (GetRangeRequest) returns (GetRangeResponse) {}
}

message GenericRequest {
  int32 code = 1;
  string data= 2;
}

message GenericResponse {
  string status = 1;
  string message = 2;
  string data = 3;
}

message FindMessage {
  int32 key = 1;
}

message FindResponse {
  bool response = 1;
  string ip = 2;
  int32 port = 3;
}

message GetRangeRequest {
  int32 node = 1;
}

message GetRangeResponse {
  int32 node = 1;
  string range = 2;
  string data = 3;
}
